fix scrollTimestamp when reqDetail is visible

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -100,7 +100,7 @@ $size-xxxl: $size-base * 11; // 44px;
 }
 
 // widths
-$name-col-width: 200px;
+$name-col-width: 250px;
 $filter-row-height: 42px;
 $timeline-height: 100px;
 
